# microsoft_services_tools

./: .gitignore
api_template/: Cargo.toml  README.md  README.rs
api_template/src/: auth.rs  main.rs
audit_sharedmailbox_adminroles/: Cargo.toml  README.md
audit_sharedmailbox_adminroles/src/: main.rs
audit_sharedmailbox_blockstatus/: Cargo.toml
audit_sharedmailbox_blockstatus/src/: auth.rs
audit_sharedmailbox_licenses/: Cargo.toml  README.md
audit_sharedmailbox_licenses/src/: auth.rs  main.rs
get_email/: Cargo.toml  README.md
get_email/src/: main.rs
licenseChecker/: README.md  go.mod  go.sum  main.go
licenseRemoval/: README.md  go.mod  go.sum  main.go
revoke_mfaregistrations/: Cargo.toml  README.md
revoke_mfaregistrations/src/: auth.rs  main.rs
revoke_mfasessions/: Cargo.toml  README.md
revoke_mfasessions/src/: auth.rs  main.rs
revoke_sessions/: Cargo.toml  README.md
revoke_sessions/src/: auth.rs  main.rs
send_email/: Cargo.toml  README.md
send_email/src/: auth.rs  main.rs
template_cli/: Cargo.toml  README.md
template_cli/src/: auth.rs  main.rs
