[package]
name = "audit_sharedmailbox_adminroles"
version = "0.1.0"
edition = "2021"
description = ""
authors = ["Bryan Abbott <bryan.abbott01@pm.me>"]
repository = "https://github.com/whitefox82/microsoft_services_tools"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.11.5"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
