[package]
name = "get_email"
version = "0.1.0"
edition = "2021"
description = ""
authors = ["Bryan Abbott <bryan.abbott01@pm.me>"]
repository = "https://github.com/whitefox82/microsoft_services_tools"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
dotenv = "0.15"
log = "0.4"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40", features = ["full"] }
