[package]
name = "revoke_mfasessions"
version = "0.1.0"
edition = "2021"
description = "A Rust-based CLI tool to revoke Microsoft 365 MFA sessions for users."
authors = ["Bryan Abbott <bryan.abbott01@pm.me>"]
repository = "https://github.com/whitefox82/microsoft_services_tools"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4"
regex = "1.7"
reqwest = { version = "0.12.7", features = ["json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
