[package]
name = "revoke_sessions"
version = "0.1.0"
edition = "2021"
description = "A Rust-based CLI tool to revoke Microsoft 365 sign-in sessions for users."
authors = ["Bryan Abbott <bryan.abbott01@pm.me>"]
repository = "https://github.com/whitefox82/microsoft_services_tools"

[dependencies]
anyhow = "1.0"
clap = { version = "*", features = ["derive"] }
dotenv = "0.15"
env_logger = "*"
log = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
