[package]
name = "send_email"
version = "0.1.0"
edition = "2021"
authors = ["Bryan Abbott <bryan.abbott01@pm.me"]
repository = "https://github.com/whitefox82/microsoft_services_tools"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.11"
regex = "1.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
